<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2AE68B39">

    <com.example.dotsdashes.lev2
        android:id="@+id/lev2"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginBottom="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="#ED9F9F"
        android:gravity="center"
        android:text="@string/dots_dashes"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="80dp"
        android:background="#E7BAEC"
        android:gravity="center"
        android:text="@string/player_2"
        android:textColor="#0B2FC1"
        android:textSize="24sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:background="#E7BAEC"
        android:gravity="center"
        android:text="@string/player_1"
        android:textColor="#FF0000"
        android:textSize="24sp"
        android:textStyle="italic"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#E7BAEC"
        android:gravity="center"
        android:text="@string/player_3"
        android:textColor="#29A117"
        android:textSize="24sp"
        android:textStyle="italic"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <Button
        android:id="@+id/btn_undo"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="#CDCACD"
        android:text="@string/undo"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="@+id/lev2"
        app:layout_constraintStart_toStartOf="@+id/lev2"
        app:layout_constraintTop_toBottomOf="@+id/lev2" />
</androidx.constraintlayout.widget.ConstraintLayout>